--- a/package.json
+++ b/package.json
@@ -11,18 +11,29 @@
   "dependencies": {
     "@langchain/community": "^0.3.45",
     "@langchain/openai": "^0.5.11",
+    "@neondatabase/serverless": "^1.0.0",
+    "@uploadthing/react": "^7.3.1",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
+    "formidable": "^3.5.4",
     "langchain": "^0.3.27",
     "mammoth": "^1.9.1",
     "next": "15.3.3",
     "pdf-parse": "^1.1.1",
+    "pdf-poppler": "^0.2.1",
+    "pdf2pic": "^3.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uploadthing": "^7.7.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.6",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tsx": "^4.19.4"
   }
 }
