corrected Almost Ui of this

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "formidable": "^3.5.4",
+    "jspdf": "^3.0.1",
     "langchain": "^0.3.27",
+    "lucide-react": "^0.513.0",
     "mammoth": "^1.9.1",
     "next": "15.3.3",
     "pdf-parse": "^1.1.1",
